# image_registration

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  ex_lucas_kanade.cpp
include/: grad.h  image_registration.h  img_loader.h  lucas_kanade.h  warp.h
src/: CMakeLists.txt  imgregist.cpp  lucas_kanade.cpp  warp.cpp
tests/: CMakeLists.txt  test_grad.cpp  test_img_loader.cpp  test_warp.cpp
